--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    
+    - name: Install Scrapy
+      run: pip install Scrapy
+      
     - name: Run Scrapy Crawl
       run: |
         cd weibo   # 更改为你的scrapy项目路径
