--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,9 @@ jobs:
       
     - name: Run Scrapy Crawl
       run: |
-        cd weibo   # 更改为你的scrapy项目路径
-        scrapy crawl search  # 更改为你的爬虫名字
+        cd weibo  
+        scrapy crawl search
+        cd ..
         
     - name: Set up Git
       run: |
@@ -35,10 +36,6 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git add .
-        git commit -m "Add crawled data"
-        if [ -z "$(git status --porcelain)" ]; then
-            echo "No changes to commit"
-        else
-            git push https://${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
-        fi
+        git add -A   # 添加所有改动的文件
+        git commit -m "Add crawled data" || echo "No changes to commit"  # 如果没有需要提交的改动，此命令将失败，但这不应该导致整个步骤失败
+        git push https://${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git || true  # 如果没有需要提交的改动，此命令将失败，但这不应该导致整个步骤失败
